argocd/software/ingress-argo.yaml
apiVersion: extensions/v1beta1
#apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    use-forwarded-headers: "true"
    enable-real-ip: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: https
